Fix for injection background to be behind all text

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -81,12 +81,12 @@ body {
     padding: 0;
 }
 
-html::after {
+html::before {
     background-image: var(--scanlines-image);
     content: " ";
     display: block;
     position: fixed;
-    z-index: -1;
+    z-index: -1000;
     left: 0;
     top: 0;
     width: 100%;
